; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_vf_convolution.c_filter_roberts.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_vf_convolution.c_filter_roberts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, float, float, i32*, i32**, i32, i32, i32, i32)* @filter_roberts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @filter_roberts(i32* %0, i32 %1, float %2, float %3, i32* %4, i32** %5, i32 %6, i32 %7, i32 %8, i32 %9) #0 {
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca float, align 4
  %14 = alloca float, align 4
  %15 = alloca i32*, align 8
  %16 = alloca i32**, align 8
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca float, align 4
  %23 = alloca float, align 4
  store i32* %0, i32** %11, align 8
  store i32 %1, i32* %12, align 4
  store float %2, float* %13, align 4
  store float %3, float* %14, align 4
  store i32* %4, i32** %15, align 8
  store i32** %5, i32*** %16, align 8
  store i32 %6, i32* %17, align 4
  store i32 %7, i32* %18, align 4
  store i32 %8, i32* %19, align 4
  store i32 %9, i32* %20, align 4
  store i32 0, i32* %21, align 4
  br label %24

24:                                               ; preds = %82, %10
  %25 = load i32, i32* %21, align 4
  %26 = load i32, i32* %12, align 4
  %27 = icmp slt i32 %25, %26
  br i1 %27, label %28, label %85

28:                                               ; preds = %24
  %29 = load i32**, i32*** %16, align 8
  %30 = getelementptr inbounds i32*, i32** %29, i64 0
  %31 = load i32*, i32** %30, align 8
  %32 = load i32, i32* %21, align 4
  %33 = sext i32 %32 to i64
  %34 = getelementptr inbounds i32, i32* %31, i64 %33
  %35 = load i32, i32* %34, align 4
  %36 = mul nsw i32 %35, 1
  %37 = load i32**, i32*** %16, align 8
  %38 = getelementptr inbounds i32*, i32** %37, i64 1
  %39 = load i32*, i32** %38, align 8
  %40 = load i32, i32* %21, align 4
  %41 = sext i32 %40 to i64
  %42 = getelementptr inbounds i32, i32* %39, i64 %41
  %43 = load i32, i32* %42, align 4
  %44 = mul nsw i32 %43, -1
  %45 = add nsw i32 %36, %44
  %46 = sitofp i32 %45 to float
  store float %46, float* %22, align 4
  %47 = load i32**, i32*** %16, align 8
  %48 = getelementptr inbounds i32*, i32** %47, i64 4
  %49 = load i32*, i32** %48, align 8
  %50 = load i32, i32* %21, align 4
  %51 = sext i32 %50 to i64
  %52 = getelementptr inbounds i32, i32* %49, i64 %51
  %53 = load i32, i32* %52, align 4
  %54 = mul nsw i32 %53, 1
  %55 = load i32**, i32*** %16, align 8
  %56 = getelementptr inbounds i32*, i32** %55, i64 3
  %57 = load i32*, i32** %56, align 8
  %58 = load i32, i32* %21, align 4
  %59 = sext i32 %58 to i64
  %60 = getelementptr inbounds i32, i32* %57, i64 %59
  %61 = load i32, i32* %60, align 4
  %62 = mul nsw i32 %61, -1
  %63 = add nsw i32 %54, %62
  %64 = sitofp i32 %63 to float
  store float %64, float* %23, align 4
  %65 = load float, float* %22, align 4
  %66 = load float, float* %22, align 4
  %67 = fmul float %65, %66
  %68 = load float, float* %23, align 4
  %69 = load float, float* %23, align 4
  %70 = fmul float %68, %69
  %71 = fadd float %67, %70
  %72 = call float @sqrtf(float %71) #3
  %73 = load float, float* %13, align 4
  %74 = fmul float %72, %73
  %75 = load float, float* %14, align 4
  %76 = fadd float %74, %75
  %77 = call i32 @av_clip_uint8(float %76)
  %78 = load i32*, i32** %11, align 8
  %79 = load i32, i32* %21, align 4
  %80 = sext i32 %79 to i64
  %81 = getelementptr inbounds i32, i32* %78, i64 %80
  store i32 %77, i32* %81, align 4
  br label %82

82:                                               ; preds = %28
  %83 = load i32, i32* %21, align 4
  %84 = add nsw i32 %83, 1
  store i32 %84, i32* %21, align 4
  br label %24

85:                                               ; preds = %24
  ret void
}

declare dso_local i32 @av_clip_uint8(float) #1

; Function Attrs: nounwind
declare dso_local float @sqrtf(float) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
